<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"    
    android:background="#000000" >
    <Button
        android:id="@+id/play_from_opt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/small_spacing"
        android:paddingBottom="@dimen/small_spacing"
        android:paddingLeft="@dimen/med_spacing"
        android:paddingRight="@dimen/med_spacing"
        android:layout_margin="@dimen/med_spacing"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="#8064A2"
        android:textSize="@dimen/normal_text_size"
        android:text="@string/play_button_text"
        android:onClick="Play" />
    <CheckBox
        android:id="@+id/word_length_chkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/med_spacing"
        android:checked="true"
        android:gravity="center_vertical"
        android:text="@string/min_word_length_opt"
        android:onClick="Allow3LetterWordOpt"
        android:textColor="#FFFFFF" />
     <CheckBox
        android:id="@+id/free_play_chkbox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/med_spacing"
        android:checked="false"
        android:gravity="center_vertical"
        android:text="@string/free_play_opt"
        android:onClick="AllowFreePlay"
        android:textColor="#FFFFFF" />   
</LinearLayout>
