<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:baselineAligned="false"
    android:background="#000000"
    android:weightSum="100"
    android:orientation="vertical"  
    tools:context=".MainActivity" >
    <ImageView
        android:id="@+id/banner"
        android:contentDescription="@string/app_name"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:layout_margin="@dimen/small_spacing"
        android:src="@drawable/game_name" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:weightSum="100" >
    <Button
        android:id="@+id/options_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/med_spacing"
        android:layout_weight="20"
        android:background="#C0504D"
        android:onClick="ShowOptions"
        android:padding="@dimen/small_spacing"
        android:text="@string/options_button_text"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold" />
     <Space
        android:id="@+id/space1"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:layout_width="0dp"
        android:layout_margin="@dimen/med_spacing" />
    <Button
        android:id="@+id/play_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/med_spacing"
        android:layout_weight="20"
        android:background="#8064A2"
        android:onClick="Play"
        android:padding="@dimen/small_spacing"
        android:text="@string/play_button_text"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/large_text_size"
        android:textStyle="bold" />
    <Space
        android:id="@+id/space2"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:layout_width="0dp"
        android:layout_margin="@dimen/med_spacing" />
     <Button
        android:id="@+id/help_button"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:layout_width="0dp"
        android:layout_margin="@dimen/med_spacing"
        android:padding="@dimen/small_spacing"
        android:textSize="@dimen/large_text_size"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="#00B050"
        android:text="@string/help_button_text"
        android:onClick="DisplayHelp" />
    </LinearLayout>
</LinearLayout>
