<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="100" >
 <LinearLayout   
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="20"
    android:background="#000000"
    android:weightSum="100" >
    <Button
      android:id="@+id/play_again"
      android:layout_width="0dp"
      android:layout_weight="20"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="@dimen/small_spacing"
      android:layout_margin="@dimen/med_spacing"
      android:textColor="#FFFFFF"
      android:textStyle="bold"
      android:background="#8064A2"
      android:textSize="@dimen/normal_text_size"
      android:text="@string/play_again_title"
      android:onClick="Play" />
    <Button
      android:id="@+id/vict_to_main"
      android:layout_width="0dp"
      android:layout_weight="20"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="@dimen/small_spacing"
      android:layout_margin="@dimen/med_spacing"
      android:textColor="#FFFFFF"
      android:textStyle="bold"
      android:background="#8064A2"
      android:textSize="@dimen/normal_text_size"
      android:text="@string/to_main_menu_button_text"
      android:onClick="DisplayMainMenu" />
    <TextView
       android:id="@+id/winner"
       android:layout_width="0dp"
       android:layout_weight="60"
       android:layout_height="wrap_content"
       android:background="#000000"
       android:gravity="left"
       android:textAlignment="gravity"
       android:padding="@dimen/small_spacing"
       android:layout_margin="@dimen/med_spacing"
       android:text=""
       android:textColor="#FFFFFF"
       android:textSize="@dimen/large_text_size"
       android:textStyle="bold" />   
   </LinearLayout>
   <TextView
       android:id="@+id/letters"
       android:layout_width="fill_parent"
       android:layout_height="0dp"
       android:layout_weight="20"
       android:background="#000000"
       android:gravity="center"
       android:textAlignment="gravity"
       android:padding="@dimen/small_spacing"
       android:layout_margin="@dimen/med_spacing"
       android:text=""
       android:textColor="#FFFFFF"
       android:textSize="@dimen/bigger_text_size"
       android:textStyle="bold" />
 <LinearLayout   
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="60"
    android:weightSum="100"
    android:background="#000000"
    android:baselineAligned="false" >
     <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="50"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100" >
        <TextView
            android:id="@+id/your_words_title"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
	        android:layout_weight="10"
            android:background="#000000"
            android:gravity="center"
            android:textAlignment="gravity"
            android:padding="@dimen/small_spacing"
            android:text="@string/player_words_title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
        <WebView
	        android:id="@+id/your_words"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="90"
	        android:layout_margin="@dimen/small_spacing" />
    </LinearLayout>
 <!--   
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="25"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100" >
        <TextView
            android:id="@+id/comp_words_title"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
	        android:layout_weight="10"
            android:background="#000000"
            android:gravity="left"
            android:textAlignment="gravity"
            android:padding="@dimen/small_spacing"
            android:text="@string/comp_words_title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
        <WebView
	        android:id="@+id/comp_words"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="90"
	        android:layout_margin="@dimen/small_spacing" />
    </LinearLayout>
  -->
     <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="50"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100" >
        <TextView
            android:id="@+id/all_words_title"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
	        android:layout_weight="10"
            android:background="#000000"
            android:gravity="center"
            android:textAlignment="gravity"
            android:padding="@dimen/small_spacing"
            android:text="@string/all_words_title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold" />
        <WebView
	        android:id="@+id/all_words"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="90"
	        android:layout_margin="@dimen/small_spacing" />
    </LinearLayout>   
</LinearLayout>
</LinearLayout>
