<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:baselineAligned="false"
    android:background="#000000"
    android:weightSum="100" >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="70"
        android:weightSum="100"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/commentary"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_spacing"
            android:layout_weight="20"
            android:background="#000000"
            android:gravity="center"
            android:padding="@dimen/small_spacing"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="@dimen/bigger_text_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:weightSum="100" >
            <Button
                android:id="@+id/purge_word"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#222222"
                android:text="@string/purge_word_symbol"
                android:onClick="RestoreLetterGrid" />
            <TextView
                android:id="@+id/word_edit"
                android:layout_width="0dp"
                android:layout_weight="80"
                android:layout_height="fill_parent"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:gravity="center_vertical|left"
                android:textAlignment="gravity"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#000E1A"
                android:text="" />
            <Button
                android:id="@+id/takeback"
                android:layout_height="fill_parent"
                android:layout_weight="10"
                android:layout_width="0dp"
                android:layout_margin="0dp"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#000E1A"
                android:text="@string/backspace_symbol"
                android:onClick="TakeBack" />
         </LinearLayout>
         
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:weightSum="4" >
            
          <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="4" >
         
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4" >
            <Button
                android:id="@+id/letter1"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter2"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter3"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
             <Button
                android:id="@+id/letter4"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />           
         </LinearLayout>
          <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4" >
            <Button
                android:id="@+id/letter5"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter6"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter7"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter8"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
         </LinearLayout>
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4" >
            <Button
                android:id="@+id/letter9"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter10"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter11"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter12"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />           
         </LinearLayout>
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="4" >
            <Button
                android:id="@+id/letter13"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter14"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter15"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />
            <Button
                android:id="@+id/letter16"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#474747"
                style="?android:attr/borderlessButtonStyle"
                android:onClick="LetterClicked" />           
         </LinearLayout>
         </LinearLayout>
         <Button
                android:id="@+id/end_word"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_margin="@dimen/small_spacing"
                android:padding="@dimen/small_spacing"
                android:textSize="@dimen/large_text_size"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:background="#222222"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/end_word_button_text"
                android:onClick="EndWord" />
         </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="30"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="100" >
        <TextView
            android:id="@+id/countdown"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
	        android:layout_weight="10"
            android:background="#000000"
            android:gravity="right|center_vertical"
            android:textAlignment="gravity"
            android:padding="@dimen/small_spacing"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="@dimen/large_text_size"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/your_words_title"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
	        android:layout_weight="10"
            android:background="#000000"
            android:gravity="center"
            android:textAlignment="gravity"
            android:padding="@dimen/small_spacing"
            android:text="@string/player_words_title"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/bigger_text_size"
            android:textStyle="bold" />
        <WebView
	        android:id="@+id/player_words"
	        android:layout_width="fill_parent"
	        android:layout_height="0dp"
	        android:layout_weight="80"
	        android:layout_margin="@dimen/small_spacing" />
    </LinearLayout>
 </LinearLayout>
